--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="/Logo.jpeg" />
   <title>UnklabMarketPlace</title>
   <meta name="description" content="Marketplace for Unklab" />
   <meta name="author" content="UnklabMarketPlace" />
